src/objects/QC__c.object
<CustomObject>
    <description>QC: Quality Control record based on a outbound call or SSI record</description>
    <fields>
        <fullName>Accuratecy_of_data_IB__c</fullName>
        <inlineHelpText>1.  记录准确的信息；
2. 文档内容匹配通话实质。</inlineHelpText>
        <label>Accuratecy of data (IB)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Appeal_Comments__c</fullName>
        <label>Appeal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Appeal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appeal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appeal_result__c</fullName>
        <label>Appeal result</label>
        <picklist>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSR_Name__c</fullName>
        <label>CSR Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calibration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calibration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Log__c</fullName>
        <label>Call Log</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Clarify_Confirm_Customer_Requirement__c</fullName>
        <inlineHelpText>1. 通过复述、重组及澄清有效组织语言，与客户确认需求及重要的基本信息；
2. 能准确理解客户意图，不需要客户多次重复；
3.不主观猜测或评论未经确认的信息。</inlineHelpText>
        <label>Clarify&amp;Confirm Customer Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Collect_Customer_Information__c</fullName>
        <inlineHelpText>按照流程要求收集必要的信息，如客户信息、销售信息、车辆信息、初始信息来源等。</inlineHelpText>
        <label>Collect Customer Information</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communicate_Ability_Initiative__c</fullName>
        <inlineHelpText>1.主动提供相关信息或额外相关帮助；
2.适当的询问客户是否需要其他帮助；
3.解答详尽，未出现态度懒散、一问一答、爱搭不理等情况；
4.主动控制通话时长，把握通话通话主题。</inlineHelpText>
        <label>Communicate Ability - Initiative</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communicate_Ability_Listening_Ability__c</fullName>
        <inlineHelpText>1.主动倾听,注意力集中,常用&quot;是的、好的&quot;等及时给予客户反馈；
2.在客户表达清晰的情况下，不需客户反复重复相同信息两次以上（不含两次）；
3. 未出现答非所问,理解出现偏差等情况。</inlineHelpText>
        <label>Communicate Ability - Listening Ability</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Communicate_Ability_Rapid_Response__c</fullName>
        <inlineHelpText>对客户的需求给予快速的回应，未出现长时间冷场,甚至要客户提醒才回应客户的情况。</inlineHelpText>
        <label>Communicate Ability - Rapid Response</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Correctly_Interpret_The_Questionnaire__c</fullName>
        <inlineHelpText>不错误引导客户，主动核实客户的需求。</inlineHelpText>
        <label>Correctly Interpret The Questionnaire</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Need_IB__c</fullName>
        <inlineHelpText>1、提供准确和完整的MBCL/smart产品信息。 
2、提供准确和完整的MBCL/smart活动信息。 
3、提供准确和完整的MBCL/smart的其它相关信息（例如车辆价格、配置信息）</inlineHelpText>
        <label>Customer Need (IB)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Collection_IB__c</fullName>
        <inlineHelpText>按照流程要求收集必要的信息，如客户信息、销售信息、车辆信息、初始信息来源等。</inlineHelpText>
        <label>Data Collection (IB)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Accuracy__c</fullName>
        <inlineHelpText>1.  记录准确的信息；
2. 文档内容匹配通话实质。</inlineHelpText>
        <label>Document Accuracy</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Familiar_MBCL_Smart_Knowledge__c</fullName>
        <inlineHelpText>1.  充分了解并完全掌握MBCL/smart产品价格、经销商分布及现行活动的知识；
2.  充分了解汽车相关的知识。</inlineHelpText>
        <label>Familiar MBCL/Smart/ Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Follow_The_Operation_Process__c</fullName>
        <inlineHelpText>1.活动运营流程
2. 销售线索运营流程
3. 投诉处理流程
4. 一般咨询处理流程
5.  电话结束转接IVR流程 
6. 核实客户共享数据及接收相关资料的意愿</inlineHelpText>
        <label>Follow The Operation Process</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Following_Questionnaire_Logic__c</fullName>
        <inlineHelpText>1.遵循问卷逻辑；
2.按脚本收集或表达关键信息。</inlineHelpText>
        <label>Following Questionnaire Logic</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Info_Delivery_IB__c</fullName>
        <inlineHelpText>1.提供准确和完整的MBCL/smart产品信息；
2.提供准确和完整的MBCL/smart活动信息；
3.提供准确和完整的MBCL/smart的其它相关信息（例如：PDI/上牌政策等）。</inlineHelpText>
        <label>Info Delivery (IB)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opening_Speech_IB__c</fullName>
        <inlineHelpText>1.使用标准的开场白，不漏说或错说；
2.语速适中，表达清晰；
3.开场白中表现热情，包含服务意愿语言，并主动询问客户姓名。</inlineHelpText>
        <label>Opening Speech (IB)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perception_Focus_On_Customer_Feel__c</fullName>
        <inlineHelpText>1.使用恰当语言适时响应客户感受,如&quot;我理解您的心情&quot;,&quot;我明白…&quot;&quot;确实是…&quot; &quot;很抱歉给您带来不便&quot;等有技巧的话语;
2.使用语言安抚客户(如投诉时),对客户问题关注,有同理心。</inlineHelpText>
        <label>Perception - Focus On Customer Feel</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perception_Hang_Up__c</fullName>
        <inlineHelpText>客户挂断电话后再挂机</inlineHelpText>
        <label>Perception - Hang Up</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perception_JinYongYu__c</fullName>
        <inlineHelpText>1.通话中未使用让客户觉得不舒服(如顶撞/质疑/否定)的用语,如&quot;喂,啊?!我不知道,你得这么做,那没办法,这是不可能的&quot;等；
2.不能使用反问,质问的语言,谩骂,讥讽客户；
3.不能与客户闲聊。</inlineHelpText>
        <label>Perception - JinYongYu</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perception_Patience_Degree__c</fullName>
        <inlineHelpText>1.表现出良好的耐心，语气中未表现不耐烦，语速未不恰当地加快；
2.不随意打断客户，不急于挂电话；
3.不忽略客户的某些非重要问题；
4.遇到无法解决的问题表示跟进，操作复杂的问题没有推托之辞。</inlineHelpText>
        <label>Perception - Patience Degree</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Perception_Satisfaction__c</fullName>
        <inlineHelpText>准确转接满意度。</inlineHelpText>
        <label>Perception - Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_flow_IB__c</fullName>
        <inlineHelpText>1.活动运营流程
2. 销售线索运营流程
3. 投诉处理流程
4. 一般咨询处理流程
5.  电话结束转接IVR流程 
6. 核实客户共享数据及接收相关资料的意愿</inlineHelpText>
        <label>Process flow (IB)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proper_Pronunciation_Intonation_Speed__c</fullName>
        <inlineHelpText>1.普通话标准，不带有严重的口音；
2.语调上扬,有抑扬顿挫的变化；
3.语速匹配客户的情绪及需求。</inlineHelpText>
        <label>Proper Pronunciation&amp;Intonation&amp;Speed</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Provide_Accurate_Complete_Information__c</fullName>
        <inlineHelpText>1.提供准确和完整的MBCL/smart产品信息；
2.提供准确和完整的MBCL/smart活动信息；
3.提供准确和完整的MBCL/smart的其它相关信息（例如：PDI/上牌政策等）。</inlineHelpText>
        <label>Provide Accurate&amp;Complete Information</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q10_Comments__c</fullName>
        <label>Specification - Polite Language Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q11_Comments__c</fullName>
        <label>Specification - Spoken Language Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q12_Comments__c</fullName>
        <label>Communicate Ability - Listening Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Q1_Criteria__c</fullName>
        <defaultValue>$Label.QC_Completeness_Criteria</defaultValue>
        <label>Q1 Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QC_Overall_Comment__c</fullName>
        <label>QC Overall Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <inlineHelpText>1.  对于超出解答能力范围的问题,与客户重复确认,主动记录并跟进；
2.  主动和积极的介绍活动和产品信息；
3.  积极主动澄清生词生字，如拼写客户名称、非常用字等。</inlineHelpText>
        <label>Responsibility</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSI__c</fullName>
        <description>Lookup related SSI record</description>
        <label>SSI</label>
        <referenceTo>SSI__c</referenceTo>
        <relationshipLabel>QC</relationshipLabel>
        <relationshipName>QC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specification_Polite_Language__c</fullName>
        <inlineHelpText>1.使用规范的礼貌用语并贯彻通话始终；
2.让客户等待后向客户致歉并表示感谢；
3.在通话中得知客户姓氏后适度称呼客户姓氏；
4.需要客户重述时适当道歉；</inlineHelpText>
        <label>Specification - Polite Language</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specification_Spoken_Language__c</fullName>
        <inlineHelpText>1.通话中表达流畅,没有口语,土话等不专业语言；
2.没有&quot;行啊,对呀,当然啦,就这样吧,哎,啊,成&quot;等或不必要的&quot;这个…那个…嗯…&quot;等口语和方言；</inlineHelpText>
        <label>Specification - Spoken Language</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Conclusion__c</fullName>
        <inlineHelpText>1.使用标准的结束语，不错说漏说；
2.语速适中，未出现不耐烦或语速过快表达欠清晰情况。</inlineHelpText>
        <label>Standard Conclusion</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Opening__c</fullName>
        <inlineHelpText>1.使用标准的开场白，不漏说或错说
2.语速适中，表达清晰；
3.开场白中表现热情，包含服务意愿语言，并主动询问客户姓名。</inlineHelpText>
        <label>Standard Opening</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>低</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recall</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Comments__c</fullName>
        <label>Supervisor Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supervisor Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Task_ID__c , &quot;View Task&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Task ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tone_of_speech_IB__c</fullName>
        <inlineHelpText>1.普通话标准，不带有严重的口音；
2.语调上扬,有抑扬顿挫的变化；
3.语速匹配客户的情绪及需求</inlineHelpText>
        <label>Tone of speech (IB)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Score_1__c</fullName>
        <formula>(IF(ISPICKVAL(Provide_Accurate_Complete_Information__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Document_Accuracy__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Correctly_Interpret_The_Questionnaire__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Familiar_MBCL_Smart_Knowledge__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Follow_The_Operation_Process__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Following_Questionnaire_Logic__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Standard_Opening__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Proper_Pronunciation_Intonation_Speed__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Specification_Polite_Language__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Specification_Spoken_Language__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Standard_Conclusion__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Communicate_Ability_Listening_Ability__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Communicate_Ability_Initiative__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Communicate_Ability_Rapid_Response__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Perception_Focus_On_Customer_Feel__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Perception_Patience_Degree__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Perception_JinYongYu__c, &apos;高&apos;), 1, 0) + 
IF(ISPICKVAL(Perception_Hang_Up__c, &apos;高&apos;), 1, 0) 
) /18 - (
IF(!ISPICKVAL(Document_Accuracy__c, &apos;高&apos;), 1, 0) + 
IF(!ISPICKVAL(Follow_The_Operation_Process__c, &apos;高&apos;), 1, 0) + 
IF(!ISPICKVAL(Following_Questionnaire_Logic__c, &apos;高&apos;), 1, 0) + 
IF(!ISPICKVAL(Perception_Focus_On_Customer_Feel__c, &apos;高&apos;), 1, 0) + 
IF(!ISPICKVAL(Perception_Patience_Degree__c, &apos;高&apos;), 1, 0)
)*0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Score_2__c</fullName>
        <formula>(IF(!ISPICKVAL(Provide_Accurate_Complete_Information__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Document_Accuracy__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Correctly_Interpret_The_Questionnaire__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Familiar_MBCL_Smart_Knowledge__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Follow_The_Operation_Process__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Following_Questionnaire_Logic__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Standard_Opening__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Proper_Pronunciation_Intonation_Speed__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Specification_Polite_Language__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Specification_Spoken_Language__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Standard_Conclusion__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Communicate_Ability_Listening_Ability__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Communicate_Ability_Initiative__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Communicate_Ability_Rapid_Response__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Perception_Focus_On_Customer_Feel__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Perception_Patience_Degree__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Perception_JinYongYu__c, &apos;低&apos;), 1, 0) + 
IF(!ISPICKVAL(Perception_Hang_Up__c, &apos;低&apos;), 1, 0) 
) /18 - (
IF(ISPICKVAL(Document_Accuracy__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Correctly_Interpret_The_Questionnaire__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Familiar_MBCL_Smart_Knowledge__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Follow_The_Operation_Process__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Following_Questionnaire_Logic__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Standard_Opening__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Proper_Pronunciation_Intonation_Speed__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Specification_Polite_Language__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Specification_Spoken_Language__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Standard_Conclusion__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Communicate_Ability_Listening_Ability__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Communicate_Ability_Initiative__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Perception_Focus_On_Customer_Feel__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Perception_Patience_Degree__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Perception_JinYongYu__c, &apos;低&apos;), 1, 0) + 
IF(ISPICKVAL(Perception_Hang_Up__c, &apos;低&apos;), 1, 0) 
)*0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>